# src/routes/index.ts
@@ -1,5 +1,6 @@
 /** Root routing module. */
 import { Router } from 'express'
+import authRouter from './auth.route'
 import booksRouter from './books.route'
 import echo from '../controllers/echo.controller'
 import health from '../controllers/health.controller'
@@ -12,6 +13,7 @@ rootRouter.post('/echo', echo)
 rootRouter.get('/health', health)
 rootRouter.get('/ping', ping)
 
+rootRouter.use('/auth', authRouter)
 rootRouter.use('/books', booksRouter)
 
 export default rootRouter
